# Distributed-Task-Queue

./: .dockerignore  .env.example  .env.vercel.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PRODUCTION_FIXES.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-vercel.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml  docker.yml
api/: index.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  nginx.conf
docs/: BEGINNER_GUIDE.md  DIAGNOSTIC.md  INTERVIEW_PREP.md  LEARNING_PATH.md  PROJECT_DEEP_DIVE.md  QUICK_START.md  RESUME_PORTFOLIO_GUIDE.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  USER_GUIDE.md  VERCEL_500_FIX.md  VISUAL_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  RealTimeChart.tsx  StatusBadge.tsx  TaskDetailPanel.tsx  TaskSubmitModal.tsx  index.ts
frontend/src/lib/: api.ts  websocket.ts
frontend/src/pages/: Dashboard.tsx  Queues.tsx  Tasks.tsx  Workers.tsx  index.ts
frontend/src/types/: index.ts
src/: __init__.py  config.py  logging_config.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routers/: __init__.py  queues.py  tasks.py  workers.py  ws.py
src/queue/: __init__.py  broker.py  task.py
src/worker/: __init__.py  main.py  utils.py  worker.py
src/worker/handlers/: __init__.py  data_handler.py  email_handler.py  image_handler.py
tests/: __init__.py  conftest.py  test_api.py  test_broker.py  test_worker.py
